--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "node-otp": "^1.2.3",
+    "otp": "^1.1.2",
+    "otp-io": "^1.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "readline-sync": "^1.4.10",
+    "twilio": "^4.20.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
